[metadata]
name = dinjo
version = attr:dinjo.VERSION
author = Juan Esteban Aristizabal-Zuluaga
author_email = jeaz.git@gmail.com
description = DINJO lets you find optimal values of initial value problems´ parameters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fenfisdi/dinjo
download_url = https://github.com/fenfisdi/dinjo/archive/refs/tags/0.1.0.tar.gz
project_urls =
    Documentation = https://dinjo.readthedocs.io/
license = gplv3
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Development Status :: 3 - Alpha
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy==1.20.3
    scipy==1.6.3
python_requires = >=3.8
zip_safe = False

[options.packages.find]
where = src
